# libVocalShaper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Macros.h  README.md  libVocalShaper.h
docs/: How-to-caculate-time.md  How-to-complie-module-with-CMake.md  How-to-develop-modules.md  How-to-hermite-interpolation.md  How-to-write-LookAndFeel-config-file.md  What-are-phoneme-types.md  What-is-the-structure-of-project.md
engines/: EngineBase.cpp  EngineBase.h  EngineHelper.cpp  EngineHelper.h  ParamInfo.h  PhonemeInfo.h  PhoneratorBase.h  RendererBase.h  SingerHub.cpp  SingerHub.h  SingerInfo.h  SpliterBase.h
files/vsp3/: CMakeLists.txt  FilePacker.cpp  FilePacker.h  ProtoConverter.cpp  ProtoConverter.h  ProtoParser.cpp  ProtoSerilazer.cpp  ProtoType.h  Utils.cpp  Utils.h  vsp3.h
files/vsp3/proto/: Curve.proto  DPoint.proto  Instr.proto  Json.proto  Label.proto  Note.proto  Param.proto  Phoneme.proto  Plugin.proto  Point.proto  Project.proto  Script.proto  Track.proto  Utils.proto  Wave.proto
files/vsp3/proto_out/: README.md
plugins/: EditorBase.cpp  EditorBase.h  Utils.cpp  Utils.h
projects/: Curve.h  DPoint.h  EventProcesser.cpp  EventProcesser.h  EventUndo.cpp  EventUndo.h  Instr.h  Json.h  Label.h  Note.h  Param.h  Phoneme.h  Plugin.h  Point.h  Project.cpp  Project.h  ProjectCopier.cpp  ProjectCopier.h  ProjectDAO.cpp  ProjectDAO.h  ProjectMerger.cpp  ProjectMerger.h  ProjectMeta.cpp  ProjectMeta.h  ProjectProxy.cpp  ProjectProxy.h  Script.h  SerializableProjectStructure.h  Track.h  Utils.cpp  Utils.h  Wave.h
projects/actions/: ActionBase.h  Actions.h  CurveAction.cpp  CurveAction.h  DPointAction.cpp  DPointAction.h  InstrAction.cpp  InstrAction.h  InstrParamAction.cpp  InstrParamAction.h  JsonAction.cpp  JsonAction.h  LabelAction.cpp  LabelAction.h  NoteAction.cpp  NoteAction.h  NoteParamAction.cpp  NoteParamAction.h  PhonemeAction.cpp  PhonemeAction.h  PluginAction.cpp  PluginAction.h  PluginParamAction.cpp  PluginParamAction.h  PointAction.cpp  PointAction.h  ProjectAction.cpp  ProjectAction.h  ScriptAction.cpp  ScriptAction.h  TrackAction.cpp  TrackAction.h  TrackParamAction.cpp  TrackParamAction.h  WaveAction.cpp  WaveAction.h
projects/curve/: HermiteInterpolation.cpp  HermiteInterpolation.h
projects/daos/: CurveDAO.cpp  CurveDAO.h  DPointDAO.cpp  DPointDAO.h  InstrDAO.cpp  InstrDAO.h  JsonDAO.cpp  JsonDAO.h  LabelDAO.cpp  LabelDAO.h  NoteDAO.cpp  NoteDAO.h  ParamDAO.cpp  ParamDAO.h  PhonemeDAO.cpp  PhonemeDAO.h  PluginDAO.cpp  PluginDAO.h  PointDAO.cpp  PointDAO.h  ProjectDAO.cpp  ProjectDAO.h  ScriptDAO.cpp  ScriptDAO.h  TrackDAO.cpp  TrackDAO.h  WaveDAO.cpp  WaveDAO.h
projects/datas/: Curve.cpp  Curve.h  DPoint.h  Instr.cpp  Instr.h  Json.h  Label.h  Note.cpp  Note.h  Param.h  Phoneme.cpp  Phoneme.h  Plugin.cpp  Plugin.h  Point.h  Project.cpp  Project.h  Script.h  SerializableProjectStructure.cpp  SerializableProjectStructure.h  Track.cpp  Track.h  Utils.cpp  Utils.h  Wave.h
projects/events/: CurveEvent.cpp  CurveEvent.h  DPointEvent.cpp  DPointEvent.h  Events.h  InstrEvent.cpp  InstrEvent.h  InstrParamEvent.cpp  InstrParamEvent.h  JsonEvent.cpp  JsonEvent.h  LabelEvent.cpp  LabelEvent.h  MasterTrackEvent.cpp  MasterTrackEvent.h  NoteEvent.cpp  NoteEvent.h  NoteParamEvent.cpp  NoteParamEvent.h  PhonemeEvent.cpp  PhonemeEvent.h  PluginEvent.cpp  PluginEvent.h  PluginParamEvent.cpp  PluginParamEvent.h  PointEvent.cpp  PointEvent.h  ProjectEvent.cpp  ProjectEvent.h  ProjectEventStructure.cpp  ProjectEventStructure.h  ScriptEvent.cpp  ScriptEvent.h  TrackEvent.cpp  TrackEvent.h  TrackParamEvent.cpp  TrackParamEvent.h  WaveEvent.cpp  WaveEvent.h
projects/tempo/: BeatTemp.cpp  BeatTemp.h  LabelTemp.cpp  LabelTemp.h  TempoTemp.cpp  TempoTemp.h
projects/utils/: CountTime.cpp  CountTime.h
utils/: IniParser.cpp  IniParser.h  IniTokeniser.cpp  IniTokeniser.h  JsonTokeniser.cpp  JsonTokeniser.h  MemLimit.cpp  MemLimit.h
